--- a/code/Samples/CMakeLists.txt
+++ b/code/Samples/CMakeLists.txt
@@ -1,5 +1,6 @@
 fips_add_subdirectory(Clear)
 fips_add_subdirectory(Triangle)
+fips_add_subdirectory(TriangleOnSecondMonitor)
 fips_add_subdirectory(Quad)
 fips_add_subdirectory(Shapes)
 fips_add_subdirectory(PackedNormals)
